# registration

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
auth/: .dockerignore  Dockerfile  auth.example.yml  pyproject.toml
auth/alembic/: env.py
auth/alembic/versions/: 008c665f04fd_add_device_auth_table.py  3f60a0fd2505_add_role_column.py  54805d339b34_remove_webauthn_tables.py  8f1f34f51bb9_initial_revision.py  972656493800_update_auth_table.py  c7f5c2daa38e_add_webauthn_table.py  cec9198cba41_add_email_auth_table.py  e145d3e45ee9_add_tables.py
auth/oes/auth/: __init__.py  auth.py  config.py  device.py  email.py  main.py  mq.py  orm.py  policy.py  routes.py  service.py  token.py  webauthn.py
auth/scripts/: docker-entrypoint.sh  healthcheck.py
auth/tests/: test_auth.py  test_policy.py  test_token.py
cart/: .dockerignore  .gitignore  Dockerfile  cart.example.yml  pyproject.toml
cart/alembic/: env.py
cart/alembic/versions/: cde0bec93f9d_add_cart_child_table.py  e1863894f5a5_initial_revision.py
cart/oes/cart/: __init__.py  cart.py  config.py  main.py  orm.py  routes.py
cart/scripts/: docker-entrypoint.sh
cart/tests/: conftest.py  test_cart.py
email/: .dockerignore  .gitignore  Dockerfile  email.example.yml  go.mod  go.sum  pyproject.toml
email/cmd/send/: main.go
email/cmd/worker/: main.go
email/config/: config.go
email/email/: email.go
email/oes/email/: __init__.py  config.py  html.py  main.py  sender.py  template.py  types.py
email/senders/mock/: mock.go
email/senders/smtp/: smtp.go
email/template/: attachment.go  attachment_test.go  template.go  template_test.go  test_inline.txt  test_template.txt
email/templates/: auth.txt  receipt.txt
email/tests/email/: test_html.py  test_template.py  test_types.py
email/tests/email/templates/: subject.txt  template.txt
interview/: .dockerignore  .gitignore  Dockerfile  config.example.yml  interview.example.yml  interviews.example.yml  pyproject.toml
interview/oes/interview/: __init__.py  cache.py  immutable.py  serialization.py  storage.py
interview/oes/interview/config/: __init__.py  base_dir.py  config.py  interview.py
interview/oes/interview/input/: __init__.py  field.py  field_template.py  question.py  serialization.py  types.py
interview/oes/interview/interview/: error.py  (+6 more)
interview/scripts/: healthcheck.py
interview/tests/: test_cache.py  test_immutable.py  test_interview.py  test_storage.py
interview/tests/config/: test_config.py  test_interview.py
interview/tests/input/: test_field.py  test_question.py
interview/tests/integration/: conftest.py  test_interview.py
interview/tests/interview/: test_resolve.py  test_state.py
interview/tests/interview2/: test_state.py
interview/tests/logic/: test_pointer.py  test_proxy.py  test_undefined.py
interview/tests/test_data/: interviews.yml
interview/tests/variables/: test_locator.py  test_proxy.py
payment/: .dockerignore  .gitignore  Dockerfile  payment.example.yml  pyproject.toml
payment/alembic/: env.py
payment/alembic/versions/: 4a5b20883385_add_receipt_id_column.py  ad243d64fbed_add_index_to_cart_data.py  bcb0f3682d8b_initial_revision.py
payment/oes/payment/: __init__.py  config.py  currency.py  main.py  mq.py  orm.py  payment.py  pricing.py  routes.py  service.py  types.py
payment/scripts/: docker-entrypoint.sh  healthcheck.py
pricing/: .dockerignore  .gitignore  Dockerfile  go.mod  go.sum  healthcheck.sh  pricing.example.yml  pyproject.toml
pricing/cmd/pricing/: main.go
pricing/internal/config/: config.go
pricing/internal/logic/: logic_test.go  logic_test.yml
pricing/internal/pricing/: default.go  default_test.go  default_test.yml  pricing.go  scripts.go  scripts_test.go
pricing/internal/structs/: structs.go
pricing/oes/pricing/: config.py  default_pricing.py  main.py  models.py  pricing.py  routes.py  script.py  serialization.py  types.py
pricing/scripts/: example.py
pricing/tests/: test_default_pricing.py  test_script.py
python/interview/: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yml  interviews.example.yml  pyproject.toml
python/interview/tests/: test_immutable_mapping.py
python/template/: README.md  pyproject.toml
python/template/tests/: test_env.py  test_expression.py  test_filters.py  test_functions.py  test_logic.py  test_template.py
registration/: .dockerignore  .gitignore  Dockerfile  config.example.yml  pyproject.toml  registration.example.yml
registration/alembic/: env.py
registration/alembic/versions/: 0d869dfb28eb_replace_uuid_fields.py  1e85bc76884b_add_checked_in_fields.py  3ca543489971_initial_revision.py  41af70eeb3ce_add_account_id_column.py  472a983a2284_add_access_code_table.py  523471301347_add_check_in_id_column.py  87730ca2879a_initial_revision.py  ab91a4dc905d_add_missing_date_closed_column_to_.py  df43d7cee34a_add_name_columns_and_indexes.py  e68f41cfaf65_add_email_index.py  ec352ca24f58_add_event_stats_and_number.py
registration/oes/registration/: access_code.py  batch.py  config.py  event.py  main.py  mq.py  orm.py  registration.py  serialization.py
registration/oes/registration_service/: batch.py  event.py  main.py  orm.py  registration.py  serialization.py
registration/scripts/: docker-entrypoint.sh
registration/tests/: conftest.py  test_batch.py  test_event.py  test_registration.py
registration/tests/entities/: test_payment.py
registration/tests/hook/: test_service.py
registration/tests/interview/: test_service.py
utils/: pyproject.toml
utils/oes/utils/: __init__.py  config.py  log.py  logic.py  mapping.py  orm.py  request.py  response.py  sanic.py  template.py
utils/tests/: test_logic.py  test_mapping.py  test_serialization.py  test_template.py
web/: .dockerignore  Dockerfile  events.example.yml  pyproject.toml
web/oes/web/: __init__.py  access_code.py  admin.py  cart.py  config.py  interview.py  interview2.py  main.py  payment.py  registration.py  registration2.py  selfservice.py  types.py
web/scripts/: healthcheck.py
web/tests/: test_config.py  test_registration.py
(+997 files in other folders)
