[tool.poetry]
name = "oes-registration"
version = "0.1.0"
description = ""
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{include = "oes"}]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.2.0"
cattrs = "^23.2.3"
orjson = "^3.10.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
typing-extensions = "^4.11.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
