[tool.poetry]
name = "oes-auth"
version = "0.1.0"
description = ""
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{ include = "oes" }]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^24.3.0"
cattrs = "^24.1.2"
pyjwt = "^2.8.0"
orjson = "^3.10.3"
oes-utils = { git = "https://github.com/waweber/registration-monorepo-tmp.git", subdirectory = "utils", rev = "16a9631ab53a16cdd940f2df890d2bc63449d2f5", extras = [
    "typed-settings",
    "sanic",
    "sqlalchemy",
] }
alembic = "^1.13.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.29.0"
nanoid = "^2.0.0"
loguru = "^0.7.2"
sanic = { extras = ["ext"], version = "^23.12.1" }
typing-extensions = "^4.12.0"
email-validator = "^2.1.1"
aio-pika = "^9.4.1"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
coverage = "^7.5.1"
pytest-asyncio = "^0.23.8"

[tool.poetry.scripts]
oes-auth-service = "oes.auth.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
