[tool.poetry]
name = "oes-cart"
version = "0.1.0"
description = "OES registration cart service"
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{ include = "oes" }]

[tool.poetry.dependencies]
python = "^3.10"
oes-utils = { git = "https://github.com/waweber/registration-monorepo-tmp.git", subdirectory = "utils", rev = "16a9631ab53a16cdd940f2df890d2bc63449d2f5", extras = [
    "typed-settings",
    "sanic",
    "sqlalchemy",
] }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.29" }
orjson = "^3.10.1"
attrs = "^24.3.0"
cattrs = "^24.1.2"
alembic = "^1.13.1"
typed-settings = "^24.2.0"
asyncpg = "^0.29.0"
sanic = {extras = ["ext"], version = "^23.12.1"}
uvloop = "^0.19.0"
httpx = "^0.27.0"
redis = "^5.0.4"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
oes-cart-service = "oes.cart.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
