[tool.poetry]
name = "oes-cart"
version = "0.1.0"
description = "OES registration cart service"
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{ include = "oes" }]

[tool.poetry.dependencies]
python = "^3.10"
oes-utils = { git = "https://github.com/Open-Event-Systems/registration", subdirectory = "utils", rev = "657cb63d91b49c3af1a36a32a5f1d86dd8b7162f", extras = [
    "typed-settings",
    "sanic",
    "sqlalchemy",
] }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.29" }
orjson = "^3.10.1"
attrs = "^25.3.0"
cattrs = "^25.1.1"
alembic = "^1.13.1"
typed-settings = "^24.2.0"
asyncpg = "^0.29.0"
sanic = {version = "^25.3.0", extras = ["ext"]}
uvloop = "^0.19.0"
httpx = "^0.27.0"
redis = "^5.0.4"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
oes-cart-service = "oes.cart.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
