[tool.poetry]
name = "oes-email"
version = "0.1.0"
description = ""
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{ include = "oes" }]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
typing-extensions = "^4.12.0"
aio-pika = "^9.4.1"
orjson = "^3.9.2"
css-inline = "^0.14.1"
minify-html = "^0.15.0"
jinja2 = "^3.1.4"
typed-settings = "^24.3.0"
attrs = "^23.2.0"
oes-utils = { git = "https://github.com/waweber/registration-monorepo-tmp.git", subdirectory = "utils", rev = "93057f461249c6d6b40fdbb676da770827d246fa", extras = [
    "typed-settings",
] }
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
oes-email-worker = "oes.email.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
