[tool.poetry]
name = "oes-interview"
version = "0.1.0"
description = ""
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{include = "oes"}]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.2.0"
cattrs = "^23.2.3"
typed-settings = "^24.2.0"
jinja2 = "^3.1.3"
orjson = "^3.10.3"
loguru = "^0.7.2"
oes-utils = {path = "../utils", extras = ["template", "typed-settings"]}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
