[tool.poetry]
name = "oes-interview"
version = "0.1.0"
description = ""
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{include = "oes"}]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.2.0"
cattrs = "^23.2.3"
typed-settings = "^24.2.0"
jinja2 = "^3.1.3"
orjson = "^3.10.3"
loguru = "^0.7.2"
oes-utils = {path = "../utils", extras = ["template", "typed-settings"]}
pyparsing = "^3.1.2"
immutabledict = "^4.2.0"
email-validator = "^2.1.1"
publicsuffixlist = "^0.10.0.20240503"
ruamel-yaml = "^0.18.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

# Built-in field types
pytest-asyncio = "^0.23.6"
[tool.poetry.plugins."oes.interview.field_types"]
text = "oes.interview.input.field_types.text:make_text_field_template"
number = "oes.interview.input.field_types.number:make_number_field_template"
date = "oes.interview.input.field_types.date:make_date_field_template"
select = "oes.interview.input.field_types.select:make_select_field_template"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
