[tool.poetry]
name = "oes-interview"
version = "0.1.0"
description = ""
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{include = "oes"}]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^25.3.0"
cattrs = "^25.1.1"
typed-settings = "^24.2.0"
jinja2 = "^3.1.3"
orjson = "^3.10.3"
loguru = "^0.7.2"
oes-utils = { git = "https://github.com/Open-Event-Systems/registration", subdirectory = "utils", rev = "11e5814bfea800250af8bd7f71b663bd33eb9370", extras = [
    "typed-settings",
    "sanic",
    "template",
] }
pyparsing = "^3.1.2"
immutabledict = "^4.2.0"
email-validator = "^2.1.1"
publicsuffixlist = "^0.10.0.20240503"
ruamel-yaml = "^0.18.6"
redis = "^5.0.4"
sanic = {extras = ["ext"], version = "^23.12.1"}
uvloop = "^0.19.0"
hypercorn = "^0.16.0"
typing-extensions = "^4.12.2"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"

# Built-in field types
[tool.poetry.plugins."oes.interview.field_types"]
text = "oes.interview.input.field_types.text:make_text_field_template"
number = "oes.interview.input.field_types.number:make_number_field_template"
date = "oes.interview.input.field_types.date:make_date_field_template"
select = "oes.interview.input.field_types.select:make_select_field_template"
button = "oes.interview.input.field_types.button:make_button_field_template"

[tool.poetry.scripts]
oes-interview-service = "oes.interview.server.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
