[tool.poetry]
name = "oes-payment"
version = "0.1.0"
description = "OES registration payment service"
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{ include = "oes" }]

[tool.poetry.dependencies]
python = "^3.10"
oes-utils = { git = "https://github.com/waweber/registration-monorepo-tmp.git", subdirectory = "utils", rev = "16a9631ab53a16cdd940f2df890d2bc63449d2f5", extras = [
    "typed-settings",
    "sanic",
    "sqlalchemy",
    "template",
] }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
sanic = { extras = ["ext"], version = "^23.12.1" }
alembic = "^1.13.1"
asyncpg = "^0.29.0"
uvloop = "^0.19.0"
attrs = "^24.3.0"
cattrs = "^24.1.2"
orjson = "^3.10.3"
typed-settings = "^24.3.0"
typing-extensions = "^4.12.0"
nanoid = "^2.0.0"
jinja2 = "^3.1.4"
squareup = "^37.1.0.20240604"
aio-pika = "^9.4.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"


# Built-in services
[tool.poetry.plugins."oes.payment.services"]
system = "oes.payment.services.system:make_system_payment_service"
mock = "oes.payment.services.mock:make_mock_payment_service"
suspend = "oes.payment.services.suspend:make_suspend_payment_service"
square = "oes.payment.services.square.service:make_square_payment_service"

[tool.poetry.scripts]
oes-payment-service = "oes.payment.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
