[tool.poetry]
name = "oes-payment"
version = "0.1.0"
description = "OES registration payment service"
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{ include = "oes" }]

[tool.poetry.dependencies]
python = "^3.10"
oes-utils = { git = "https://github.com/Open-Event-Systems/registration", subdirectory = "utils", rev = "657cb63d91b49c3af1a36a32a5f1d86dd8b7162f", extras = [
    "typed-settings",
    "sanic",
    "sqlalchemy",
    "template",
] }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
sanic = {version = "^25.3.0", extras = ["ext"]}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
uvloop = "^0.19.0"
attrs = "^25.3.0"
cattrs = "^25.1.1"
orjson = "^3.10.3"
typed-settings = "^24.3.0"
typing-extensions = "^4.12.0"
nanoid = "^2.0.0"
jinja2 = "^3.1.4"
squareup = "^37.1.0.20240604"
aio-pika = "^9.4.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"


# Built-in services
[tool.poetry.plugins."oes.payment.services"]
system = "oes.payment.services.system:make_system_payment_service"
mock = "oes.payment.services.mock:make_mock_payment_service"
suspend = "oes.payment.services.suspend:make_suspend_payment_service"
square = "oes.payment.services.square.service:make_square_payment_service"

[tool.poetry.scripts]
oes-payment-service = "oes.payment.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
