[tool.poetry]
name = "oes-pricing"
version = "0.1.0"
description = ""
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{ include = "oes" }]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.2.0"
cattrs = "^23.2.3"
loguru = "^0.7.2"
typed-settings = "^24.2.0"
orjson = "^3.10.2"
sanic = {extras = ["ext"], version = "^23.12.1"}
uvloop = "^0.19.0"
oes-utils = { git = "https://github.com/waweber/registration-monorepo-tmp.git", subdirectory = "utils", rev = "d47778a854d512657dc0c990bb6f538a0a813a18", extras = [
    "typed-settings",
    "sanic",
    "template",
] }
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
oes-pricing-service = "oes.pricing.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
