[tool.poetry]
name = "oes-registration"
version = "0.1.0"
description = ""
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{include = "oes"}]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^25.3.0"
cattrs = "^25.1.1"
orjson = "^3.10.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
typing-extensions = "^4.11.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
uvloop = "^0.19.0"
sanic = {extras = ["ext"], version = "^23.12.1"}
loguru = "^0.7.2"
typed-settings = {extras = ["attrs", "cattrs"], version = "^24.2.0"}
ruamel-yaml = "^0.18.6"
oes-utils = { git = "https://github.com/Open-Event-Systems/registration", subdirectory = "utils", rev = "11e5814bfea800250af8bd7f71b663bd33eb9370", extras = [
    "typed-settings",
    "sanic",
    "sqlalchemy",
] }
httpx = "^0.27.0"
aio-pika = "^9.4.2"
nanoid = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"

[tool.poetry.scripts]
oes-registration-service = "oes.registration.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
