[tool.poetry]
name = "oes-utils"
version = "0.1.0"
description = "OES shared utilities"
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{ include = "oes" }]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
sqlalchemy = { version = "^2.0.29", optional = true }
sanic = { version = "^23.12.1", optional = true }
typed-settings = { version = "^24.2.0", optional = true }
ruamel-yaml = { version = "^0.18.6", optional = true }
orjson = {version = "^3.10.1", optional = true}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
cattrs = "^23.2.3"

[tool.poetry.extras]
sqlalchemy = ["sqlalchemy"]
sanic = ["sanic", "sqlalchemy", "orjson"]
typed-settings = ["ruamel-yaml", "typed-settings"]
all = ["sanic", "sqlalchemy", "ruamel-yaml", "typed-settings", "orjson"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
