[tool.poetry]
name = "web"
version = "0.1.0"
description = "OES registration web portal"
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{ include = "oes" }]

[tool.poetry.dependencies]
python = "^3.10"
oes-utils = { git = "https://github.com/waweber/registration-monorepo-tmp.git", subdirectory = "utils", rev = "a0d0bc03f6defb4bddb560f7aeb4b12b73066346", extras = [
    "typed-settings",
    "sanic",
    "sqlalchemy",
] }
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
sanic = {extras = ["ext"], version = "^23.12.1"}
attrs = "^23.2.0"
cattrs = "^23.2.3"
uvloop = "^0.19.0"
alembic = "^1.13.1"
loguru = "^0.7.2"
asyncpg = "^0.29.0"
jinja2 = "^3.1.4"
typed-settings = "^24.3.0"
typing-extensions = "^4.11.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"

[tool.poetry.scripts]
oes-web-service = "oes.web.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
