[tool.poetry]
name = "web"
version = "0.1.0"
description = "OES registration web portal"
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{ include = "oes" }]

[tool.poetry.dependencies]
python = "^3.10"
oes-utils = {git = "https://github.com/Open-Event-Systems/registration", subdirectory = "utils", rev = "657cb63d91b49c3af1a36a32a5f1d86dd8b7162f", extras = [
    "typed-settings",
    "sanic",
    "sqlalchemy",
] }
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
sanic = {version = "^25.3.0", extras = ["ext"]}
attrs = "^25.3.0"
cattrs = "^25.1.1"
uvloop = "^0.19.0"
alembic = "^1.13.1"
loguru = "^0.7.2"
asyncpg = "^0.29.0"
jinja2 = "^3.1.4"
typed-settings = "^24.3.0"
typing-extensions = "^4.11.0"
httpx = "^0.27.0"
nanoid = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"

[tool.poetry.scripts]
oes-web-service = "oes.web.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
