[tool.poetry]
name = "oes.template"
version = "0.3.0"
description = "Library for working with templates and expressions"
authors = ["Wes <wes@anthronewengland.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "oes"}]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.2"
attrs = "^23.1"
typing-extensions = "^4.7.1"
oes-util = { git = "https://github.com/Open-Event-Systems/registration.git", subdirectory = "python/util", rev = "207f35e3f4eff0822bb727b7cffca7156929d97b" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
coverage = "^7.2.3"
cattrs = "^23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
packages = [
    "oes.template",
]
mypy_path = "$MYPY_CONFIG_FILE_DIR"
explicit_package_bases = true
