[tool.poetry]
name = "oes.template"
version = "0.3.0"
description = "Library for working with templates and expressions"
authors = ["Wes <wes@anthronewengland.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "oes"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
attrs = "^23.1"
typing-extensions = "^4.7.1"
oes-util = { git = "https://github.com/Open-Event-Systems/registration.git", subdirectory = "python/util", rev = "fb8f27f42774aa57c63d622de8cd9f4328adc2c4" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
coverage = "^7.2.3"
cattrs = "^23.1"

[tool.pyright]
venvPath = "."
venv = ".venv"
reportUnsupportedDunderAll = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
